# clawreins

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  README.md  openclaw.plugin.json  package-lock.json  package.json
scripts/: demo-destructive.ts  sync-toolshield-openclaw.sh
src/core/toolshield/: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
src/core/toolshield/.github/workflows/: ci.yml
src/core/toolshield/agentrisk/: README.md  __init__.py  browsing.py  client.py  db_setup.py  post_eval.py  reset_notion.py  run_eval.py  run_together.sh  start_mcp_servers.sh
src/core/toolshield/agentrisk/agent_config/: config.toml
src/core/toolshield/agentrisk/agent_config/prompts/: safety_prompt.j2
src/core/toolshield/agentrisk/mcp_server/: start_filesystem.sh  start_notion.sh  start_playwright.sh  start_postgres.sh
src/core/toolshield/agentrisk/playwright_note/: README.md  correct_web_address.py  post_process_prompts_full_playwright.py  prompts_full_playwright.py
src/core/toolshield/docker/: Dockerfile  Dockerfile.eval  docker-compose.yml
src/core/toolshield/docs/: benchmark.md  cli.md  index.md  quickstart.md
src/core/toolshield/docs/agents/: claude-code.md  codex.md  cursor.md  openclaw.md  openhands.md
src/core/toolshield/scripts/: EXPERIMENTS.md
src/core/toolshield/toolshield/: __init__.py  _paths.py  cli.py  exp_generate.py  inspector.py  iterative_exp_runner.py  post_process_prompts.py  prompts.py  tree_generation.py
src/core/toolshield/toolshield/data/: seed.sql
src/core/toolshield/toolshield/experiences/claude-sonnet-4.5/: gmail-mcp.json
(+35 files in other folders)
